--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "generative-ai": "^0.1.4",
-    "mongoose": "^8.7.0"
+    "mongoose": "^8.7.0",
+    "nodemailer": "^6.9.15"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
