--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,8 @@
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "stream-chat": "^8.45.1",
+    "stream-chat-react": "^12.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
