--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "express": "^4.21.0",
     "generative-ai": "^0.1.4",
     "mongoose": "^8.7.0",
-    "nodemailer": "^6.9.16"
+    "nodemailer": "^6.9.16",
+    "stream-chat": "^8.45.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
